Session05.I Forget Create new Merge

--- a/Web_Api_E-commerc/appsettings.json
+++ b/Web_Api_E-commerc/appsettings.json
@@ -9,6 +9,8 @@
   "BaseUrl" :"https://localhost:7259/",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=EcommerceDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "IdentityConnection": "Server=.;Database=EcommerceDB;Trusted_Connection=True;TrustServerCertificate=True;",
+
       "Redis":"LocalHost"
   }
 }
