--- a/Web_Api_E-commerc/appsettings.json
+++ b/Web_Api_E-commerc/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "BaseUrl": "https://localhost:7259/",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=EcommerceDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=.;Database=EcommerceDBApi;Trusted_Connection=True;TrustServerCertificate=True;",
     "IdentityConnection": "Server=.;Database=EcommerceDB.Identity;Trusted_Connection=True;TrustServerCertificate=True;",
     "Redis": "LocalHost"
   },
